--- a/10/Dockerfile
+++ b/10/Dockerfile
@@ -19,7 +19,7 @@ RUN set -x \
 # install python modules
 RUN set -x \
 	&& pip install -t /usr/lib/python2.7 requests \
-	&& pip install -t /usr/lib/python2.7 yaml
+	&& pip install -t /usr/lib/python2.7 pyyaml
 
 # Install pgtap
 RUN set -x \
