Add yaml python lib
* Update Dockerfile

--- a/10/Dockerfile
+++ b/10/Dockerfile
@@ -11,14 +11,11 @@ RUN set -x \
       ca-certificates \
       build-essential \
       wget \
-			openssl \
+      openssl \
       postgresql-server-dev-10 \
       postgresql-plpython-10 \
-			python-pip
-
-# install python modules
-RUN set -x \
-	&& pip install -t /usr/lib/python2.7 requests
+      python-pip \
+      python-setuptools
 
 # Install pgtap
 RUN set -x \
@@ -41,8 +38,13 @@ RUN set -x \
   && cd .. \
   && rm -Rdf url_encode-${URL_ENCODE_VERSION} v${URL_ENCODE_VERSION}.tar.gz
 
+# install python modules
+RUN set -x \
+	&& pip install -t /usr/lib/python2.7 requests \
+	&& pip install -t /usr/lib/python2.7 pyyaml
+
 RUN set -ex \
-  && apt-get -y remove postgresql-server-dev-10 \
+  && apt-get -y remove postgresql-server-dev-10 python-setuptools \
   && apt-get purge -y --auto-remove wget build-essential \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*;
